--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.5.0"
   }
 }
